Fix double scrollbars bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -330,7 +330,7 @@ main {
 }
 
 .modal-open {
-  overflow: visible;
+  /*overflow: visible;*/
 }
 
 .modal-scrollbar-measure{
